first try at eventbrite api integration, still more work to do

--- a/bs/index.html
+++ b/bs/index.html
@@ -232,7 +232,7 @@
 
   <body>
 
-    <div class="topbar bounceIn animate">
+    <div class="topbar">
       <div class="fill">
         <div class="container">
           <a class="brand" href="#">LyonJS</a>
@@ -252,7 +252,9 @@
         <div id="logo" class="logo bounceIn"></div>
         <div class="lead span9">
           <h2>Hold on to your butts</h2>
-          <p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
+          <p class="eb-next-event">
+            <span class="spinner"></span>
+          </p>
           <p class="buttons bounceIn animate">
             <a href="https://groups.google.com/forum/#!forum/lyonjs" class="btn">Mailing-list</a>
             <a href="http://twitter/#!/lyonjs" class="btn">Twitter</a>
@@ -267,7 +269,9 @@
           <!-- start slipsum code -->
 
           <h1>Uuummmm, this is a tasty burger!</h1>
-          <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+          <p class="eb-description">
+            <span class="spinner"></span>
+          </p>
 
           <h1>We happy?</h1>
           <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
