--- a/bs/index.html
+++ b/bs/index.html
@@ -240,6 +240,8 @@
             <li class="active bounceIn animate"><a href="./">Home</a></li>
             <li><a href="http://twitter.com/#!/lyonjs">Twitter</a></li>
             <li><a href="https://github.com/lyonjs">GitHub</a></li>
+            <li><a href="http://lyonjs.eventbrite.com">Eventbrite</a></li>
+            <li><a href="http://lanyrd.com/2011/lyonjs-october/">Lanyrd</a></li>
           </ul>
         </div>
       </div>
@@ -251,7 +253,7 @@
       <div class="hero-unit">
         <div id="logo" class="logo bounceIn"></div>
         <div class="lead span9">
-          <h2>Hold on to your butts</h2>
+          <h2><a href="http://lyonjs.eventbrite.com">Prochaine session</a></h2>
           <p class="eb-next-event">
             <span class="spinner"></span>
           </p>
@@ -272,40 +274,6 @@
           <p class="eb-description">
             <span class="spinner"></span>
           </p>
-
-          <h1>We happy?</h1>
-          <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-
-          <h1>Hold on to your butts</h1>
-          <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-
-          <h1>I gotta piss</h1>
-          <p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
-
-          <h1>I can do that</h1>
-          <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
-
-          <h1>No, motherfucker</h1>
-          <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
-
-          <h1>I gotta piss</h1>
-          <p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
-
-          <h1>Uuummmm, this is a tasty burger!</h1>
-          <p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-
-          <h1>Are you ready for the truth?</h1>
-          <p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-
-          <h1>No, motherfucker</h1>
-          <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-
-          <h1>No man, I don't eat pork</h1>
-          <p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
-
-          <h1>No man, I don't eat pork</h1>
-          <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p>
-
 
           <!-- end slipsum code -->
           <p><a class="btn" href="#">View details &raquo;</a></p>
