correct link references

--- a/bs/index.html
+++ b/bs/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="LyonJS Meetup">
     <meta name="author" content="">
 
-    <link href="./bs/bootstrap.css" rel="stylesheet">
+    <link href="../bs/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -462,10 +462,10 @@
 
     </script>
 
-    <script src="./js/libs/jquery.min.js"></script>
-    <script src="./js/libs/raphael-min.js"></script>
-    <script src="./js/libs/jquery.lifestream.min.js"></script>
-    <script src="./js/scripts.js"></script>
+    <script src="../js/libs/jquery.min.js"></script>
+    <script src="../js/libs/raphael-min.js"></script>
+    <script src="../js/libs/jquery.lifestream.min.js"></script>
+    <script src="../js/scripts.js"></script>
 
   </body>
 </html>
