correct stuff, fix things

--- a/bs/index.html
+++ b/bs/index.html
@@ -253,7 +253,7 @@
       <div class="hero-unit">
         <div id="logo" class="logo bounceIn"></div>
         <div class="lead span9">
-          <h2><a href="http://lyonjs.eventbrite.com">Prochaine session</a></h2>
+          <h2><a href="http://lyonjs.org">Lyon JS</a></h2>
           <p class="eb-next-event">
             <span class="spinner"></span>
           </p>
@@ -289,13 +289,12 @@
       <footer>
         <p class="twt"></p>
         <p class="buttons">
-          <a href="http://twitter.com/lyonjs" class="twitter-follow-button" id="twitter"></a>
-          <a href="http://github.com/lyonjs" class="twitter-follow-button" id="github"></a>
+          <a href="http://twitter.com/lyonjs" class="twitter-follow-button twitter"></a>
+          <a href="http://github.com/lyonjs" class="twitter-follow-button github"></a>
         </p>
       </footer>
 
-    </div> <!-- /container -->
-
+    </div>
 
 
     <script type="text/raphaelsvg" id="logo-svg">
