generate build output to publish

--- a/publish/index.html
+++ b/publish/index.html
@@ -1,84 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>LyonJS</title>
-    <meta name="description" content="LyonJS Meetup">
-    <meta name="author" content="">
-
-    <link rel="stylesheet" href="./css/style.css" >
-
-  </head>
-
-  <body>
-
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
-          <a class="brand" href="#">LyonJS</a>
-          <ul class="nav">
-            <li class="active bounceIn animate"><a href="./">Home</a></li>
-            <li><a href="http://twitter.com/#!/lyonjs">Twitter</a></li>
-            <li><a href="https://github.com/lyonjs">GitHub</a></li>
-            <li><a href="http://lyonjs.eventbrite.com">Eventbrite</a></li>
-            <li><a href="http://lanyrd.com/2011/lyonjs-october/">Lanyrd</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <div id="logo" class="logo bounceIn"></div>
-        <div class="lead span9">
-          <h2><a href="http://lyonjs.org">Lyon JS</a></h2>
-          <p class="eb-next-event">
-            <span class="spinner"></span>
-          </p>
-          <p class="buttons bounceIn animate">
-            <a href="https://groups.google.com/forum/#!forum/lyonjs" class="btn">Mailing-list</a>
-            <a href="http://twitter/#!/lyonjs" class="btn">Twitter</a>
-            <a href="https://github.com/lyonjs" class="btn">GitHub</a>
-          </p>
-        </div>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span11">
-          <!-- start slipsum code -->
-
-          <h1>Le Meetup JavaScript Lyonnais!</h1>
-          <p class="eb-description">
-            <span class="spinner"></span>
-          </p>
-
-          <!-- end slipsum code -->
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span5">
-          <h2>On twitter</h2>
-          <div class="twitter-stream">
-            <span class="spinner"></span>
-          </div>
-        </div>
-      </div>
-
-      <footer>
-        <p class="twt"></p>
-        <p class="buttons">
-          <a href="http://twitter.com/lyonjs" class="twitter-follow-button twitter"></a>
-          <a href="http://github.com/lyonjs" class="twitter-follow-button github"></a>
-        </p>
-      </footer>
-
-    </div>
-
-
-    <script type="text/raphaelsvg" id="logo-svg">
-      <svg
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><title>LyonJS</title><meta name=description content="LyonJS Meetup"><meta name=author content=""><link rel=stylesheet href="./css/281acc9.style.min.css"><body><div class=topbar><div class=fill><div class=container><a class=brand href="#">LyonJS</a><ul class=nav><li class="active bounceIn animate"><a href="./">Home</a></li><li><a href="http://twitter.com/#!/lyonjs">Twitter</a></li><li><a href="https://github.com/lyonjs">GitHub</a></li><li><a href="http://lyonjs.eventbrite.com">Eventbrite</a></li><li><a href="http://lanyrd.com/2011/lyonjs-october/">Lanyrd</a></li></ul></div></div></div><div class=container><div class=hero-unit><div id=logo class="logo bounceIn"></div><div class="lead span9"><h2><a href="http://lyonjs.org">Lyon JS</a></h2><p class=eb-next-event><span class=spinner></span></p><p class="buttons bounceIn animate"><a href="https://groups.google.com/forum/#!forum/lyonjs" class=btn>Mailing-list</a><a href="http://twitter/#!/lyonjs" class=btn>Twitter</a><a href="https://github.com/lyonjs" class=btn>GitHub</a></p></div></div><div class=row><div class=span11><h1>Le Meetup JavaScript Lyonnais!</h1><p class=eb-description><span class=spinner></span></p><p><a class=btn href="#">View details &raquo;</a></p></div><div class=span5><h2>On twitter</h2><div class=twitter-stream><span class=spinner></span></div></div></div><footer><p class=twt></p><p class=buttons><a href="http://twitter.com/lyonjs" class="twitter-follow-button twitter"></a><a href="http://github.com/lyonjs" class="twitter-follow-button github"></a></p></footer></div><script type="text/raphaelsvg" id=logo-svg><svg
          xmlns:dc="http://purl.org/dc/elements/1.1/"
          xmlns:cc="http://creativecommons.org/ns#"
          xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -237,18 +157,4 @@
                style="fill:#133153" />
           </g>
         </g>
-      </svg>
-
-    </script>
-
-    <script src="./js/libs/jquery.min.js"></script>
-    <script src="./js/libs/raphael-min.js"></script>
-    <script src="./js/libs/jquery.lifestream.min.js"></script>
-
-    <!-- scripts concatenated and minified via ant build script-->
-    <script src="./js/scripts.js"></script>
-    <!-- end scripts-->
-
-  </body>
-</html>
-
+      </svg></script><script src="./js/libs/jquery.min.js"></script><script src="./js/libs/raphael-min.js"></script><script src="./js/libs/jquery.lifestream.min.js"></script><script defer=defer src="/js/fa4a13b.scripts-concat.min.js"></script>
