move css / js assets and less files to assets/, rm publish / tasks dir

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="LyonJS Meetup">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="./css/style.css" >
+    <link rel="stylesheet" href="./assets/css/style.css" >
 
   </head>
 
@@ -241,12 +241,12 @@
 
     </script>
 
-    <script src="./js/libs/jquery.min.js"></script>
-    <script src="./js/libs/raphael-min.js"></script>
-    <script src="./js/libs/jquery.lifestream.min.js"></script>
+    <script src="./assets/js/libs/jquery.min.js"></script>
+    <script src="./assets/js/libs/raphael-min.js"></script>
+    <script src="./assets/js/libs/jquery.lifestream.min.js"></script>
 
     <!-- scripts concatenated and minified via ant build script-->
-    <script src="./js/scripts.js"></script>
+    <script src="./assets/js/scripts.js"></script>
     <!-- end scripts-->
 
   </body>
