--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <h2>Bienvenue sur le site de LyonJS !</h2>
 <p>Ce site a pour but de rassembler les utilisateurs JavaScript de la ville de Lyon
-et de ses alentours. Ainsi nous orgnisons des réunions d&#39;informations mensuelles
+et de ses alentours. Ainsi nous organisons des réunions d&#39;informations mensuelles
 ouvertes <strong>à tous</strong> et <strong>gratuites</strong>.
 
 </p>
