update index.html for next meetup
todo:

- rework the build thing
- kill of generation from wiki
- add form to talk and lightning submission (gdoc)
- setup (optinal) build process, minor optims css/js minification /
revving
- ...

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
+        <p><strong>Prochaine session: Lundi 21 Mai - 19:00.</strong></p>
 
-        <h3>Où ?</h3>
+        <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
+
+        <blockquote>Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. </blockquote>
+
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
         <p>Plus d'infos: par <a href="https://groups.google.com/forum/#!forum/lyonjs">ici</a></p>
@@ -81,31 +85,21 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: Mardi 10 Avril - 19:00.</strong>
+<p><strong>Prochaine session: Lundi 21 Mai - 19:00.</strong></p>
 
-</p>
-<p>Au programme :
+<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
-</p>
-<ul>
-<li>Présentation et introduction de <a href="https://github.com/cowboy/grunt">Grunt</a>, et
-dévelopement de plugin avec présentation du project
-<a href="https://github.com/h5bp/node-build-script">h5bp/node-build-script</a> par
-<a href="https://github.com/mklabs">@mklabs</a>.</li>
-</ul>
-<p>Plus d&#39;infos peuvent être trouvé sur la <a href="https://groups.google.com/d/topic/lyonjs/jqmsWXNxIIU/discussion">mailing-list</a>.
+<blockquote>Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. </blockquote>
 
-</p>
-<h3>Slides</h3>
-<p>Vous pourrez retrouver la liste des précédentes sessions et un lien vers les
-différentes présentations en vous rendant sur <a href="../Slides/">ce lien</a>.
+<p>par <a href="https://twitter.com/#!/jolecomte">Jocelyn Lecomte</a></p>
 
-</p>
-<p>Ce site est généré à partir du
-<a href="https://github.com/lyonjs/lyonjs.github.com/wiki">wiki github</a>, où vous pouvez
-également retrouver chacune de ces informations.
-</p>
-
+<blockquote>
+  Au prochain #LyonJS
+  <a href="https://twitter.com/#!/adrienplagnol">@adrienplagnol</a>
+  <a href="https://twitter.com/#!/fredericlb">@fredericlb</a>
+  nous parlerons de l’implémentation WebCL sur Firefox et de ce que l'on peut faire avec
+  (<a href="https://twitter.com/#!/LyonJS/status/200479120612790273">...</a>)
+</blockquote>
 
      </div>
      <div class="span4 menu-rg">
