Add Google Calendar

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ impressions et de poursuivre la discussion.
         <div class="twitter-stream">
           <span class="spinner"></span>
         </div>
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=250&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=vur39u1sa1b0upic2ioul1k3rk%40group.calendar.google.com&amp;color=%23875509&amp;ctz=Europe%2FParis" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
 
