--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
         <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
-        <blockquote>Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. </blockquote>
+        <blockquote>
+          Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. <br />
+          Implémentation WebCL et son utilisation, par un des devs de cette implémentation dans Firefox.
+          
+        </blockquote>
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
