--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: Lundi 22 Mai - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red" title="Désolé pour ce changment de dernière minute.">Mardi 22 Mai</div> - 19:00.</strong></p>
 
         <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
@@ -87,7 +87,7 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: Lundi 22 Mai - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red" title="Désolé pour ce changment de dernière minute.">Mardi 22 Mai</div> - 19:00.</strong> - 19:00.</strong></p>
 
 <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
