update next meetup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>LyonJS :: </title>
   <meta name="description" content="LyonJS Meetup">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/public/css/style.css" >
+  <link rel="stylesheet" href="public/css/style.css" >
 </head>
 
 <body>
@@ -40,12 +40,12 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: <span style="color: red" title="Désolé pour ce changment de dernière minute.">Mardi 22 Mai</span> - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red">Mardi 23 Octobre</span> - 19:00.</strong></p>
 
         <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
-        <blockquote>Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. 
-          <br />Implémentation WebCL et son utilisation, par un des devs de cette implémentation dans Firefox.
+        <blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, unesolution de création
+          d'application mobiles cross-platform à base de téchnologies Web : HTML 5, JavaScript et CSS.
         </blockquote>
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
@@ -78,7 +78,7 @@ sur les technologies web et JavaScript en particulier.
 impressions et de poursuivre la discussion.
 
 </p>
-<p>Les sessions se déroulent désormais habituellement le <strong>deuxième Mardi du mois</strong>.
+<p>Les sessions se déroulent habituellement le <strong>deuxième Mardi du mois</strong>.
 
 </p>
 <h3>Où ?</h3>
@@ -87,29 +87,33 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: <span style="color: red" title="Désolé pour ce changment de dernière minute.">Mardi 22 Mai</span> - 19:00.</strong> - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red">Mardi 23 Octobre</span> - 19:00.</strong></p>
 
-<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
+<h3>Quoi?</h3>
+<!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Canvas, donner à un utilisateur l'illusion de feuilleter les pages d'un livre. </blockquote>
+<blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, unesolution de création
+    d'application mobiles cross-platform à base de téchnologies Web : HTML 5, JavaScript et CSS.
+</blockquote>
 
-<p>par <a href="https://twitter.com/#!/jolecomte">Jocelyn Lecomte</a></p>
+<p>par <a href="https://twitter.com/#!/Swiip">Matthieu Lux</a></p>
 
-<blockquote>
+<!--<blockquote>
   Au prochain #LyonJS
   <a href="https://twitter.com/#!/adrienplagnol">@adrienplagnol</a>
   <a href="https://twitter.com/#!/fredericlb">@fredericlb</a>
   nous parlerons de l’implémentation WebCL sur Firefox et de ce que l'on peut faire avec
   (<a href="https://twitter.com/#!/LyonJS/status/200479120612790273">...</a>)
-</blockquote>
+</blockquote>-->
 
      </div>
      <div class="span4 menu-rg">
-        <h3>On twitter</h3>
+        <h3>Twitter</h3>
         <div class="twitter-stream">
           <span class="spinner"></span>
         </div>
-        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=250&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=vur39u1sa1b0upic2ioul1k3rk%40group.calendar.google.com&amp;color=%23875509&amp;ctz=Europe%2FParis" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
+        <h3>Les Meetup Lyonnaise <small>dont le LyonJS</small></h3>
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ck2ruq6cqfch3t4gshbd6vdnd4%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FParis" style=" border-width:0 " width="300" height="300" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
 
@@ -288,9 +292,9 @@ impressions et de poursuivre la discussion.
 
   </script>
 
-  <script src="/public/js/libs/jquery.min.js"></script>
-  <script src="/public/js/libs/raphael-min.js"></script>
-  <script src="/public/js/libs/jquery.lifestream.min.js"></script>
-  <script src="/public/js/scripts.js"></script>
+  <script src="public/js/libs/jquery.min.js"></script>
+  <script src="public/js/libs/raphael-min.js"></script>
+  <script src="public/js/libs/jquery.lifestream.min.js"></script>
+  <script src="public/js/scripts.js"></script>
 </body>
 </html>
