--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ impressions et de poursuivre la discussion.
 <h3>Quoi?</h3>
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, unesolution de création
-    d'application mobiles cross-platform à base de téchnologies Web : HTML 5, JavaScript et CSS.
+<blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, une solution de création
+    d'application mobiles cross-platform à base de technologies Web : HTML 5, JavaScript et CSS.
 </blockquote>
 
 <p>par <a href="https://twitter.com/#!/Swiip">Matthieu Lux</a></p>
@@ -112,7 +112,7 @@ impressions et de poursuivre la discussion.
         <div class="twitter-stream">
           <span class="spinner"></span>
         </div>
-        <h3>Les Meetup Lyonnaise <small>dont le LyonJS</small></h3>
+        <h3>Les Meetups Lyonnaise <small>dont le LyonJS</small></h3>
         <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ck2ruq6cqfch3t4gshbd6vdnd4%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FParis" style=" border-width:0 " width="300" height="300" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
