Cleaning and typos

--- a/index.html
+++ b/index.html
@@ -98,21 +98,13 @@ impressions et de poursuivre la discussion.
 
 <p>par <a href="https://twitter.com/#!/Swiip">Matthieu Lux</a></p>
 
-<!--<blockquote>
-  Au prochain #LyonJS
-  <a href="https://twitter.com/#!/adrienplagnol">@adrienplagnol</a>
-  <a href="https://twitter.com/#!/fredericlb">@fredericlb</a>
-  nous parlerons de l’implémentation WebCL sur Firefox et de ce que l'on peut faire avec
-  (<a href="https://twitter.com/#!/LyonJS/status/200479120612790273">...</a>)
-</blockquote>-->
-
      </div>
      <div class="span4 menu-rg">
         <h3>Twitter</h3>
         <div class="twitter-stream">
           <span class="spinner"></span>
         </div>
-        <h3>Les Meetups Lyonnaise <small>dont le LyonJS</small></h3>
+        <h3>Les Meetups lyonnaises <small>dont le LyonJS</small></h3>
         <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ck2ruq6cqfch3t4gshbd6vdnd4%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FParis" style=" border-width:0 " width="300" height="300" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
