--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
         <p><strong>Prochaine session: <span style="color: red">Mardi 23 Octobre</span> - 19:00.</strong></p>
 
+        <p style="text-align: center;">
+          <a href="http://www.eventbrite.fr/event/4556783462?ref=ebtnebregn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS : jQuery Mobile &amp; PhoneGap" /></a>
+        </p>
+
         <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
 
         <blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, unesolution de création
