add october slides and november date

--- a/Slides/index.html
+++ b/Slides/index.html
@@ -13,7 +13,7 @@
   <title>LyonJS :: </title>
   <meta name="description" content="LyonJS Meetup">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/public/css/style.css" >
+  <link rel="stylesheet" href="../public/css/style.css" >
 </head>
 
 <body>
@@ -112,6 +112,12 @@
 </p>
 </blockquote>
 
+<h3>Octobre 2012</h3>
+<p><strong>23 octobre 2012</strong></p>
+<ul>
+<li><a href="http://fr.slideshare.net/Swiip/jquery-mobile-phonegap-14932296">Présentation de jQuery Mobile et PhoneGap</a> par Matthieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>)</li>
+</ul>
+<iframe src="http://fr.slideshare.net/slideshow/embed_code/14932296" width="427" height="356" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="http://fr.slideshare.net/Swiip/jquery-mobile-phonegap-14932296" title="jQuery Mobile &amp; PhoneGap" target="_blank">jQuery Mobile &amp; PhoneGap</a> </strong> from <strong><a href="http://fr.slideshare.net/Swiip" target="_blank">Swiip</a></strong> </div>
 
      </div>
      <div class="span4 menu-rg">
