--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: <span style="color: red">Mardi 23 Octobre</span> - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red">Lundi 26 Novembre</span> - 19:00.</strong></p>
 
-        <p style="text-align: center;">
-          <a href="http://www.eventbrite.fr/event/4556783462?ref=ebtnebregn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS : jQuery Mobile &amp; PhoneGap" /></a>
+        <p style="text-align: center; ">
+          <!--<a href="http://www.eventbrite.fr/event/4556783462?ref=ebtnebregn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS : jQuery Mobile &amp; PhoneGap" /></a>-->
+          Eventbrite à venir...
         </p>
 
-        <p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>
+        <p>Au programme :</p>
 
-        <blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, unesolution de création
-          d'application mobiles cross-platform à base de téchnologies Web : HTML 5, JavaScript et CSS.
-        </blockquote>
+        <blockquote>Création de jeux vidéo en HTML5</blockquote>
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
@@ -91,16 +90,13 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: <span style="color: red">Mardi 23 Octobre</span> - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red">Lundi 26 Novembre</span> - 19:00.</strong></p>
 
 <h3>Quoi?</h3>
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Présentation du framework Web jQuery Mobile et de PhoneGap, une solution de création
-    d'application mobiles cross-platform à base de technologies Web : HTML 5, JavaScript et CSS.
-</blockquote>
-
-<p>par <a href="https://twitter.com/#!/Swiip">Matthieu Lux</a></p>
+<blockquote>Création de jeux vidéo en HTML5</blockquote>
+<p>par Samuel Ronce</p>
 
      </div>
      <div class="span4 menu-rg">
