add EventBrite for LyonSJ#9

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <p><strong>Prochaine session: <span style="color: red">Lundi 26 Novembre</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
-          <!--<a href="http://www.eventbrite.fr/event/4556783462?ref=ebtnebregn" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS : jQuery Mobile &amp; PhoneGap" /></a>-->
-          Eventbrite à venir...
+          <a href="http://lyonjs9.eventbrite.fr/" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS #9 - Création de Jeux Vidéo en HTML5" /></a>
         </p>
 
         <p>Au programme :</p>
