--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: <span style="color: red">Lundi 26 Novembre</span> - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red">Mardi 29 Janvier</span> - 19:00.</strong></p>
 
 <h3>Quoi?</h3>
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Création de jeux vidéo en HTML5</blockquote>
-<p>par Samuel Ronce</p>
+<blockquote>Soirée test en JavaScript</blockquote>
+<p>par Mathieu Sabourin et Romain Philibert</p>
 
      </div>
      <div class="span4 menu-rg">
