--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: <span style="color: red">Lundi 26 Novembre</span> - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red">Mardi 29 Janvier</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
           <a href="http://lyonjs9.eventbrite.fr/" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS #9 - Création de Jeux Vidéo en HTML5" /></a>
@@ -48,7 +48,7 @@
 
         <p>Au programme :</p>
 
-        <blockquote>Création de jeux vidéo en HTML5</blockquote>
+        <blockquote>Soirée test en JavaScript</blockquote>
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
