--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
         <p><strong>Prochaine session: <span style="color: red">Mardi 29 Janvier</span> - 19:00.</strong></p>
 
-        <p style="text-align: center; ">
+        <!--<p style="text-align: center; ">
           <a href="http://lyonjs9.eventbrite.fr/" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS #9 - Création de Jeux Vidéo en HTML5" /></a>
-        </p>
+        </p>-->
 
         <p>Au programme :</p>
 
