make description shorter

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
 
         <p>Au programme :</p>
 
-        <blockquote>Nous allons parler cette fois-ci de comment faire une suite de tests pour votre site web à travers 2 approches :
+        <blockquote>Comment faire une suite de tests pour votre site web à travers 2 approches :
 <ul>
 <li>Selenium 2 associé à QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</li>
 <li>Le triplet Mocha, Chai et Sinon.JS pour les hipsters</li>
-</ul>
-Vous sortirez de là avec tout ce qu'il faut pour produire des sites de qualité et certifiés fonctionnels !</blockquote>
+</ul></blockquote>
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
