--- a/index.html
+++ b/index.html
@@ -40,19 +40,15 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: <span style="color: red">Mardi 29 Janvier</span> - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red">Mardi 18 Fevrier</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
           <a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>
         </p>
 
-        <p>Au programme :</p>
+        <p>Au programme : AngularJS par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Tierry Chatel</a></p>
 
-        <blockquote>Comment faire une suite de tests pour votre site web à travers 2 approches :
-<ul>
-<li>Selenium 2 associé à QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</li>
-<li>Le triplet Mocha, Chai et Sinon.JS pour les hipsters</li>
-</ul></blockquote>
+
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
@@ -93,13 +89,14 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: <span style="color: red">Mardi 29 Janvier</span> - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red">Mardi 18 Fevrier</span> - 19:00.</strong></p>
 
 <h3>Quoi?</h3>
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Soirée test en JavaScript</blockquote>
-<p>par Mathieu Sabourin et Romain Philibert</p>
+<blockquote>Soirée AngularJS</blockquote>
+<p>par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Tierry Chatel</a></p>
+
 
      </div>
      <div class="span4 menu-rg">
