--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           chaque mois pour parler du JavaScript et tout ce qui l'entoure !
         </p>
 
-        <p><strong>Prochaine session: <span style="color: red">Mardi 18 Fevrier</span> - 19:00.</strong></p>
+        <p><strong>Prochaine session: <span style="color: red">Lundi 18 Fevrier</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
           <a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>
@@ -89,7 +89,7 @@ impressions et de poursuivre la discussion.
 
 </p>
 <h3>Quand?</h3>
-<p><strong>Prochaine session: <span style="color: red">Mardi 18 Fevrier</span> - 19:00.</strong></p>
+<p><strong>Prochaine session: <span style="color: red">Lundi 18 Fevrier</span> - 19:00.</strong></p>
 
 <h3>Quoi?</h3>
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
