--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>
         </p>
 
-        <p>Au programme : AngularJS par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Tierry Chatel</a></p>
+        <p>Au programme : AngularJS par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></p>
 
 
 
@@ -95,7 +95,7 @@ impressions et de poursuivre la discussion.
 <!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
 <blockquote>Soirée AngularJS</blockquote>
-<p>par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Tierry Chatel</a></p>
+<p>par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></p>
 
 
      </div>
