Comment event brite

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p><strong>Prochaine session: <span style="color: red">Lundi 18 Fevrier</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
-          <a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>
+          <!--<a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>-->
         </p>
 
         <p>Au programme : AngularJS par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></p>
