--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
           <!--<a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>-->
         </p>
 
-        <p>Au programme : AngularJS par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></p>
-
+        <p>Au programme : AngularJS</p>
+<ul>
+<li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+<li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+<li>Live coding interface CRUD from scratch par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+<li>Exemples de code avancés avec <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+</ul>
 
 
         <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
